fixes + policy org.

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -798,27 +798,27 @@
  # /
 	civic_tec_regular_research_council:0 "§M§!Research Council"
 	civic_tec_regular_research_council_desc:0 "['concept_tec_leader_civic']\n\nThe government is strongly advised and monitored by an assembly of the most respectful and renowned empire's Scientists, working on pair with the authority without directly interfering."
-	civic_tec_regular_research_council_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire £scientist£ §Y$councilor_research$§! produce §Y$tec_loc_research_resources$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HCouncilor level§!\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n"
+	civic_tec_regular_research_council_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire £scientist£ §Y$councilor_research$§! produce §Y$tec_loc_research_resources$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HCouncilor level§!\n\n§HOligarchic Empires§!: §ELeader production provided by this civic is amplified by §G25%§!§!\n"
 	#old_civic_tec_regular_research_council_tooltip:0 "Active employed §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\n§YMain Scientists§!, assigned to research technologies, produce §Y$tec_loc_research_resources$§! of its field based on the number of §HResearched Technologies§! of the empire, multiplied by the §HLeader level§! and additionally increased for §YOligarchic§! empires.\n\n"
 
 	civic_tec_regular_scientific_belief:0 "§M§!Factual Belief"
 	civic_tec_regular_scientific_belief_desc:0 "['concept_tec_leader_civic']\n\nThere isn't a stronger motivator to go forward than the constant doubt and discovery lying ahead, the secrets needing solutions; as such, we move forward believing we can really reach them, we can really discover them; we must trust, and believe, in the artificers of such discoveries."
-	civic_tec_regular_scientific_belief_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire £scientist£ §Y$councilor_research$§! produce §Y$tec_loc_unity$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HCouncilor level§!\n£building£ §HResearch§! Labs increase §YMaterialist ethic Attraction§! on the planet by §G5%§! per level.\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n"
+	civic_tec_regular_scientific_belief_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire £scientist£ §Y$councilor_research$§! produce §Y$tec_loc_unity$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HCouncilor level§!\n£building£ §HResearch§! Labs increase §YMaterialist ethic Attraction§! on the planet by §G5%§! per level.\n\n§HOligarchic Empires§!: §ELeader production provided by this civic is amplified by §G25%§!§!\n"
 
  # former civic_divine_council
 	civic_tec_regular_divine_circle:0 "§M§!Divine Circle"
 	civic_tec_regular_divine_circle_desc:0 "['concept_tec_leader_civic']\n\nThe government is supervised by a council of the empire's oldest, wisest and most influential spiritual Leaders."
-	civic_tec_regular_divine_circle_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n"
+	civic_tec_regular_divine_circle_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n\n§HOligarchic Empires§!: §ELeader production provided by this civic is amplified by §G25%§!§!\n"
 
  # former civic_military_junta
 	civic_tec_regular_military_council:0 "§M§!Military Council"
 	civic_tec_regular_military_council_desc:0 "['concept_tec_leader_civic']\n\nThe government is dominated by a coalition of the most powerful War Chiefs. "
-	civic_tec_regular_military_council_tooltip:0 "Active employed £admiral£ §YAdmirals§! and £general£ §YGenerals§! have no §Y$tec_loc_unity$§! Upkeep.\nActive employed Admirals produce §Y$tec_loc_unity$§! based on the §HNaval Capacity§! of the fleet are assigned, multiplied by the §HLeader level§!\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n"
+	civic_tec_regular_military_council_tooltip:0 "Active employed £admiral£ §YAdmirals§! and £general£ §YGenerals§! have no §Y$tec_loc_unity$§! Upkeep.\nActive employed Admirals produce §Y$tec_loc_unity$§! based on the §HNaval Capacity§! of the fleet are assigned, multiplied by the §HLeader level§!\n\n§HOligarchic Empires§!: §ELeader production provided by this civic is amplified by §G25%§!§!\n"
 
  # former civic_executive_committee
 	civic_tec_regular_executive_committee: "§M§!Executive Committee"
 	civic_tec_regular_executive_committee_desc: "['concept_tec_leader_civic']\n\nThis government is dominated by a committee of the Empire's most skillful bureaucrats and administrators."
-	civic_tec_regular_executive_committee_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n$tec_loc_amenities$ from £job_politician£ Administrators: §G+2§!"
+	civic_tec_regular_executive_committee_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n\n§HOligarchic Empires§!: §ELeader production provided by this civic is amplified by §G25%§!§!\n$tec_loc_amenities$ from £job_politician£ Administrators: §G+2§!"
 
  # former civic_genetic_aristocracy
 	civic_tec_regular_genetic_ascendancy:0 "§M§!Genetic Ascendancy"
@@ -1698,7 +1698,7 @@
 
 	civic_tec_hive_anaxiomatic:0 "Anaxiomatic Transference"
 	civic_tec_hive_anaxiomatic_desc:0 "By doing reiterative and complete revisions of the very foundation of the creation of autonomous drones, specially the ones dedicated to innovation and non linear thought, this collective ellaborated a way of making them more conscious and self-aware rewards with more creative and asymetric ways of identifying and transfering knowledge, at a great cost however, as physical and mental impact is greatly increased."
-	civic_tec_hive_anaxiomatic_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire §Y$councilor_gestalt_scientist_with_icon$§! produce §Y$tec_loc_research_resources$§! and §Y$tec_loc_unity$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HNode level§!.\n\n§HUber-Autonomous Drone Empires§!: §EUber-Autonomous Drones leaders replacing the node position §Hinherit§! this effect§!\n"
+	civic_tec_hive_anaxiomatic_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire §Y$councilor_gestalt_scientist_with_icon$§! produce §Y$tec_loc_research_resources$§! and §Y$tec_loc_unity$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HNode level§!.\n\n§HUber-Autonomous Drones§!: §EUber-Autonomous leaders replacing the node position §Hinherit§! this effect§!\n"
 
 
 	civic_tec_hive_myoneural:0 "Myoneural Coherence"
