--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -4,29 +4,29 @@
 # Edicts
 
 # Ethics
-  edict_tec_equal_opportunities:0 "Equal Opportunities"
-  edict_tec_equal_opportunities_desc:0 "Encourages any unemployed pop to voluntarily resettle themselves to suitable planets with jobs and housing within our empire, for searching new opportunities."
+	edict_tec_equal_opportunities:0 "Equal Opportunities"
+	edict_tec_equal_opportunities_desc:0 "Encourages any unemployed pop to voluntarily resettle themselves to suitable planets with jobs and housing within our empire, for searching new opportunities."
 
-  edict_tec_social_benefits:0 "Social Benefits"
-  edict_tec_social_benefits_desc:0 "TODO"
+	edict_tec_social_benefits:0 "Social Benefits"
+	edict_tec_social_benefits_desc:0 "TODO"
 
-  edict_tec_doing_your_part: "Doing Your Part"
-  edict_tec_doing_your_part_desc: "TODO"
+	edict_tec_doing_your_part: "Doing Your Part"
+	edict_tec_doing_your_part_desc: "TODO"
 
-  edict_tec_technological_funding: "Technological Funding"
-  edict_tec_technological_funding_desc: "TODO"
+	edict_tec_technological_funding: "Technological Funding"
+	edict_tec_technological_funding_desc: "TODO"
 
-  edict_tec_market_funding: "Market Funding"
-  edict_tec_market_funding_desc: "TODO"
+	edict_tec_market_funding: "Market Funding"
+	edict_tec_market_funding_desc: "TODO"
 
-  edict_tec_nature_bond: "Nature Bond"
-  edict_tec_nature_bond_desc: "TODO"
+	edict_tec_nature_bond: "Nature Bond"
+	edict_tec_nature_bond_desc: "TODO"
 
-  edict_tec_industrial_overproduction: "Industrial Overproduction"
-  edict_tec_industrial_overproduction_desc: "TODO"
+	edict_tec_industrial_overproduction: "Industrial Overproduction"
+	edict_tec_industrial_overproduction_desc: "TODO"
 
-  edict_tec_elite_boosting: "Elite Boosting"
-  edict_tec_elite_boosting_desc: "TODO"
+	edict_tec_elite_boosting: "Elite Boosting"
+	edict_tec_elite_boosting_desc: "TODO"
 
 # /
  edict_tec_mortgage_edict:0 "£job_purge£ Eternal Shifts"
@@ -1281,83 +1281,85 @@ policy_goods_policy:0 "Consumer Goods Production"
  tec_replicant_minerals_desc:0 "A lithoid-like diet will boost the internal cellular components of our people happy, sating energetic and mineral requirements.\n\n§EReplicants will consume 0.5 $tec_loc_minerals$ and 0.5 $tec_loc_energy$ as upkeep."
 
 
- policy_tec_replicant_assimilation_policy:0 "Replicant Assimilation"
- policy_tec_replicant_assimilation_policy_desc:0 "We can subdue any organic or synthetic creature to be just like us."
+	policy_tec_replicant_assimilation_policy:0 "Replicant Assimilation"
+	policy_tec_replicant_assimilation_policy_desc:0 "We can subdue any organic or synthetic creature to be just like us."
 
- tec_replicant_no_assimilation_name:0 "Create new Replicant Species"
+	tec_replicant_no_assimilation_name:0 "Create new Replicant Species"
 
- tec_replicant_create_species:0 "Create Replicant Species"
- tec_replicant_create_species_desc:0 "New assimilated Replicants will be converted into a type of species of their kind."
+	tec_replicant_create_species:0 "Create Replicant Species"
+	tec_replicant_create_species_desc:0 "New assimilated Replicants will be converted into a type of species of their kind."
 
- tec_replicant_full_assimilation_name:0 "Complete Replicant Assimilation"
- tec_replicant_assimilate:0 "Complete Assimilation"
- tec_replicant_assimilate_desc:0 "New assimilated Replicants will be of our species."
+	tec_replicant_full_assimilation_name:0 "Complete Replicant Assimilation"
+	tec_replicant_assimilate:0 "Complete Assimilation"
+	tec_replicant_assimilate_desc:0 "New assimilated Replicants will be of our species."
 
 ##SLIDERS
 
- policy_gender_policy_slider:0 "---- £job_politician£ §EGender Policies§! ----"
- policy_gender_policy_slider_desc:0 "Policies relevant to Leader gender asignment."
+	policy_gender_policy_slider:0 "---- £job_politician£ §EGender Policies§! ----"
+	policy_gender_policy_slider_desc:0 "Policies relevant to Leader gender asignment."
+
+	policy_empire_policy_slider:0 "---- £job_politician£ §EEmpire Policies§! ----"
+	policy_empire_policy_slider_desc:0 "Policies relevant to global empire administration."
+
+	policy_tec_ethic_policy_slider:0 "---- £system£ §EEthic Policies§! ----"
+	policy_tec_ethic_policy_slider_desc:0 "Policies that allow the customization and direction of empire ethics."
+
+	policy_population_policy_slider:0 "---- £pops£ §EPopulation Policies§! ----"
+	policy_population_policy_slider_desc:0 "Policies relevant to population control."
+
+	policy_slave_policy_slider:0 "---- £job_servant£ §EEnslavement Policies§! ----"
+	policy_slave_policy_slider_desc:0 "Policies relevant to enslavement control."
+
+	policy_tec_ethic_policicies_slider:0 "---- £system£ §EEthic Policies§! ----"
+	policy_tec_ethic_policicies_slider_desc:0 "Policies relevant to the empire ideologies and ethics.\n\n§YThese policies depend on the empire ethics§!"
+
+	policy_state_policy_slider:0 "---- £job_clerk£ §EState Policies§! ----"
+	policy_state_policy_slider_desc:0 "Policies relevant to localized empire administration.\n\n§YMost of these policies will be unlocked with normal administration techs.§!"
+
+	policy_AI_policy_slider:0 "---- £job_roboticist£ §EA.I. Policies§! ----"
+	policy_AI_policy_slider_desc:0 "Policies relevant to Artificial Intelligence control."
+
+	policy_bioservant_policy_slider:0 "---- £job_tec_bioengineer£ §EBioservant Policies§! ----"
+	policy_bioservant_policy_slider_desc:0 "Policies relevant to Bioservant population control."
+
+	policy_arcane_policy_slider:0 "---- £job_gpm_tec_precursor_archaeologist_2£ §EArcane Tech Policies§! ----"
+	policy_arcane_policy_slider_desc:0 "This is a separation slider, dont mind it"
+
+	policy_religious_cult_policy_slider:0 "---- £job_priest£ §EReligious Cult Policies§! ----"
+	policy_religious_cult_policy_slider_desc:0 "Policies relevant to Religious Cult Focus."
+
+	policy_tec_archivist_policy_slider:0 "---- £job_tec_grand_archivist£ §EArchivist Policies§! ----"
+	policy_tec_archivist_policy_slider_desc:0 "Policies relevant to Knowledge Vaulting."
+
+	policy_ethical_policy_slider:0 "---- £job_politician£ §EEthical revolution Policies§! ----"
+	policy_ethical_policy_slider_desc:0 "Policies relevant to Ethic Revolution."
 
 
- policy_empire_policy_slider:0 "---- £job_politician£ §EEmpire Policies§! ----"
- policy_empire_policy_slider_desc:0 "Policies relevant to global empire administration."
+	policy_empire_stance_policy_slider:0 "---- £job_tec_consular£ §EDiplomacy Policies§! ----"
+	policy_empire_stance_policy_slider_desc:0 "Policies relevant to Diplomatic Interaction."
 
- policy_population_policy_slider:0 "---- £pops£ §EPopulation Policies§! ----"
- policy_population_policy_slider_desc:0 "Policies relevant to population control."
+	policy_empire_warfare_policy_slider:0 "---- £job_soldier£ §EWarfare Policies§! ----"
+	policy_empire_warfare_policy_slider_desc:0 "Policies relevant to Warfare control."
 
- policy_slave_policy_slider:0 "---- £job_servant£ §EEnslavement Policies§! ----"
- policy_slave_policy_slider_desc:0 "Policies relevant to enslavement control."
+	policy_interference_a_primitives_policy_slider:0 "---- £job_pre_sapient£ §EPrimitive Species Policies§! ----"
+	policy_interference_a_primitives_policy_slider_desc:0 "Policies relevant to Primitives control."
 
- policy_tec_ethic_policicies_slider:0 "---- £system£ §EEthic Policies§! ----"
- policy_tec_ethic_policicies_slider_desc:0 "Policies relevant to the empire ideologies and ethics.\n\n§YThese policies depend on the empire ethics§!"
+	policy_instrospective_gestalt_policy_slider:0 "---- £unity£ §ECollective Policies§! ----"
+	policy_instrospective_gestalt_policy_slider_desc:0 "Policies relevant to Gestalt consciousness control."
 
- policy_state_policy_slider:0 "---- £job_clerk£ §EState Policies§! ----"
- policy_state_policy_slider_desc:0 "Policies relevant to localized empire administration.\n\n§YMost of these policies will be unlocked with normal administration techs.§!"
+	policy_assembly_policy_slider:0 "---- £mod_pop_growth_speed£ §ESpecies Assembly Policies§! ----"
+	policy_assembly_policy_slider_desc:0 "Policies relevant to Population Assembly control."
 
- policy_AI_policy_slider:0 "---- £job_roboticist£ §EA.I. Policies§! ----"
- policy_AI_policy_slider_desc:0 "Policies relevant to Artificial Intelligence control."
+	empty_slider_flag_name:0 "Empty slider flag"
+	Empty:0 " "
+	Empty_desc:0 "This option must appear to avoid error log spam"
+	Empty_2:0 " "
+	Empty_2_desc:0 "This option must appear to avoid error log spam"
 
- policy_bioservant_policy_slider:0 "---- £job_tec_bioengineer£ §EBioservant Policies§! ----"
- policy_bioservant_policy_slider_desc:0 "Policies relevant to Bioservant population control."
-
- policy_arcane_policy_slider:0 "---- £job_gpm_tec_precursor_archaeologist_2£ §EArcane Tech Policies§! ----"
- policy_arcane_policy_slider_desc:0 "This is a separation slider, dont mind it"
-
-policy_religious_cult_policy_slider:0 "---- £job_priest£ §EReligious Cult Policies§! ----"
- policy_religious_cult_policy_slider_desc:0 "Policies relevant to Religious Cult Focus."
-
- policy_tec_archivist_policy_slider:0 "---- £job_tec_grand_archivist£ §EArchivist Policies§! ----"
- policy_tec_archivist_policy_slider_desc:0 "Policies relevant to Knowledge Vaulting."
-
- policy_ethical_policy_slider:0 "---- £job_politician£ §EEthical revolution Policies§! ----"
- policy_ethical_policy_slider_desc:0 "Policies relevant to Ethic Revolution."
-
-
- policy_empire_stance_policy_slider:0 "---- £job_tec_consular£ §EDiplomacy Policies§! ----"
- policy_empire_stance_policy_slider_desc:0 "Policies relevant to Diplomatic Interaction."
-
- policy_empire_warfare_policy_slider:0 "---- £job_soldier£ §EWarfare Policies§! ----"
- policy_empire_warfare_policy_slider_desc:0 "Policies relevant to Warfare control."
-
- policy_interference_a_primitives_policy_slider:0 "---- £job_pre_sapient£ §EPrimitive Species Policies§! ----"
- policy_interference_a_primitives_policy_slider_desc:0 "Policies relevant to Primitives control."
-
- policy_instrospective_gestalt_policy_slider:0 "---- £unity£ §ECollective Policies§! ----"
- policy_instrospective_gestalt_policy_slider_desc:0 "Policies relevant to Gestalt consciousness control."
-
- policy_assembly_policy_slider:0 "---- £mod_pop_growth_speed£ §ESpecies Assembly Policies§! ----"
- policy_assembly_policy_slider_desc:0 "Policies relevant to Population Assembly control."
-
- empty_slider_flag_name:0 "Empty slider flag"
- Empty:0 " "
- Empty_desc:0 "This option must appear to avoid error log spam"
- Empty_2:0 " "
- Empty_2_desc:0 "This option must appear to avoid error log spam"
-
- slider_a:0 "SLIDER HIDDEN A"
- slider_a_desc:0 "SLIDER HIDDEN A"
- slider_b:0 "SLIDER HIDDEN B"
- slider_b_desc:0 "SLIDER HIDDEN B"
+	slider_a:0 "SLIDER HIDDEN A"
+	slider_a_desc:0 "SLIDER HIDDEN A"
+	slider_b:0 "SLIDER HIDDEN B"
+	slider_b_desc:0 "SLIDER HIDDEN B"
 
 
 
@@ -1384,8 +1386,8 @@ enslavement_00_desc:0 " "
 
 # Ai auths
 
-  policy_tec_aiauth_policy_slider:0 "---- §E$tec_loc_sr_tec_ai_power$ Policies§! ----"
-  policy_tec_aiauth_policy_slider_desc:0 "Policies relevant to AI Capacity and AI Nodes."
+	policy_tec_aiauth_policy_slider:0 "---- §E$tec_loc_sr_tec_ai_power$ Policies§! ----"
+	policy_tec_aiauth_policy_slider_desc:0 "Policies relevant to AI Capacity and AI Nodes."
 
  policy_tec_aiauth_share_policy: "Experience Weight"
  policy_tec_aiauth_share_policy_desc: "This policy controls the distribution of AI Capacity between our AI Nodes, influencing their development speed."
