Some more optimizations

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1147,7 +1147,7 @@
  # former civic_consumerism
 	civic_tec_regular_consumerism:0 "§R§!Consumerism"
 	civic_tec_regular_consumerism_desc:0 "['concept_tec_basic_civic']\n\nThis society promotes a social and economic ideology that encourages the acquisition of goods and services in ever-increasing amounts."
-	civic_tec_regular_consumerism_tooltip:0 "Trade £building£ §YBuildings§! provide a small amount of §Y$tec_loc_trade_value$§! per upgrade level.\n\n$tec_loc_trade_value$ from £job_clerk£ $job_clerk_plural$: §G+1§!"
+	civic_tec_regular_consumerism_tooltip:0 "Trade £building£ §YBuildings§! provide a small amount of §Y$tec_loc_trade_value$§! per upgrade level.\n"
 
  # former civic_military_dictatorship
 	civic_tec_regular_war_lords:0 "§R§!War Lords"
