--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3644,6 +3644,11 @@ mod_tec_aiauth_weight_add: "$tec_loc_ai_node$ $tec_ai_power_weight$"
 mod_tec_aiauth_experience_per_month: "$tec_loc_sr_tec_ai_power$ Allocated to Experience Gain"
 
 mod_tec_aiauth_idle_nodes_add_tooltip: "$tec_loc_ai_idle_node$ $tec_ai_power_weight$: §Y+1§!"
+
+# clerk mods
+mod_tec_job_clerk_trade_value_add: "$mod_planet_clerks_trade_value_produces_add$"
+mod_tec_job_clerk_amenities_add: "$mod_planet_clerks_amenities_produces_add$"
+# /
 # Admin locs
 
 job_tec_mecha_priest_icon:0 "£job_tec_mecha_priest£"
