--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -284,7 +284,7 @@ policy_economic_stance:0 "Market Control" #stance
 
  economic_stance_market:0 "Market Economy"
  economic_stance_market_name:0 "Market Economy"
- economic_stance_market_desc:0 "The market fluctuations are relegated to private industries, and government control and regulations over economy is generally reduced.\n\n$tec_loc_trade_value$ from £job_clerk£ $job_clerk_plural$: §G+1§!"
+ economic_stance_market_desc:0 "The market fluctuations are relegated to private industries, and government control and regulations over economy is generally reduced."
 # Only §YWealth Creation§! trade policy is available. Can't be combined with §YSocial Welfare§! or §YUtopian Abundance§! living standards.
  
  economic_stance_mixed:0 "Regulated Economy"
@@ -293,7 +293,7 @@ policy_economic_stance:0 "Market Control" #stance
  
  economic_stance_planned:0 "Planned Economy"
  economic_stance_planned_name:0 "Planned Economy"
- economic_stance_planned_desc:0 "Nationalization or direct intervention on diverse basic service companies allows for more predictable and sustainable economic development, not relied on uncertain market fluctuations or speculation, serving the population with better and cheaper basic services.\n\n$tec_loc_amenities$ from £job_clerk£ $job_clerk_plural$: §G+1§!"
+ economic_stance_planned_desc:0 "Nationalization or direct intervention on diverse basic service companies allows for more predictable and sustainable economic development, not relied on uncertain market fluctuations or speculation, serving the population with better and cheaper basic services."
 
 policy_healthcare:0 "Healthcare" 
  policy_healthcare_name:0 "Healthcare" 
