New agendas (minus gestalt)

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -107,29 +107,29 @@
 	civic_tooltip_democratic:0 "Has §YDirect Democratic§! or §YDemocratic§! Authority."
 	civic_tooltip_not_democratic:0 "Is not §YDemocratic§!."
 
-	civic_tooltip_green:0 "Is some degree of §Y$ethic_green$§!"
-	civic_tooltip_not_green:0 "Is not §Y$ethic_green$§!"
-	civic_tooltip_industrial:0 "Is some degree of §Y$ethic_industrial$§!"
-	civic_tooltip_not_industrial:0 "Is not §Y$ethic_industrial$§!" 
-	civic_tooltip_socialism:0 "Is some degree of §Y$ethic_socialism$§!"
-	civic_tooltip_not_socialism:0 "Is not §Y$ethic_socialism$§!"
-	civic_tooltip_capitalism:0 "Is some degree of §Y$ethic_capitalism$§!"
-	civic_tooltip_not_capitalism:0 "Is not §Y$ethic_capitalism$§!" 
+	civic_tooltip_ecologist:0 "Is some degree of §Y$ethic_green$§!"
+	civic_tooltip_not_ecologist:0 "Is not §Y$ethic_green$§!"
+	civic_tooltip_industrialist:0 "Is some degree of §Y$ethic_industrial$§!"
+	civic_tooltip_not_industrialist:0 "Is not §Y$ethic_industrial$§!" 
+	civic_tooltip_cooperative:0 "Is some degree of §Y$ethic_socialism$§!"
+	civic_tooltip_not_cooperative:0 "Is not §Y$ethic_socialism$§!"
+	civic_tooltip_competitive:0 "Is some degree of §Y$ethic_capitalism$§!"
+	civic_tooltip_not_competitive:0 "Is not §Y$ethic_capitalism$§!" 
 	civic_tooltip_elitist:0 "Is some degree of §Y$ethic_elitist$§!"
 	civic_tooltip_not_elitist:0 "Is not §Y$ethic_elitist$§!" 
 	civic_tooltip_pluralist:0 "Is some degree of §Y$ethic_pluralist$§!"
 	civic_tooltip_not_pluralist:0 "Is not §Y$ethic_pluralist$§!" 
 
-	civic_tooltip_industrial_or_green:0 "Is some degree of §Y$ethic_industrial$§! or §Y$ethic_green$§!"
-	civic_tooltip_fanatic_industrial_or_green:0 "Is §Y$ethic_fanatic_industrial$§! or §Y$ethic_fanatic_green$§!"
-	civic_tooltip_industrial_or_materialist:0 "Is some degree of §Y$ethic_industrial$§! or §YMaterialist§!"
+	civic_tooltip_industrialist_or_green:0 "Is some degree of §Y$ethic_industrial$§! or §Y$ethic_green$§!"
+	civic_tooltip_fanatic_industrialist_or_green:0 "Is §Y$ethic_fanatic_industrial$§! or §Y$ethic_fanatic_green$§!"
+	civic_tooltip_industrialist_or_materialist:0 "Is some degree of §Y$ethic_industrial$§! or §YMaterialist§!"
 
-	civic_tooltip_socialism_or_pluralist:0 "Is some degree of §Y$ethic_socialism$§! or §Y$ethic_pluralist$§!"
-	civic_tooltip_capitalism_or_elitist:0 "Is some degree of §Y$ethic_capitalism$§! or §Y$ethic_elitist$§!"
+	civic_tooltip_cooperative_or_pluralist:0 "Is some degree of §Y$ethic_socialism$§! or §Y$ethic_pluralist$§!"
+	civic_tooltip_competitive_or_elitist:0 "Is some degree of §Y$ethic_capitalism$§! or §Y$ethic_elitist$§!"
 
-	civic_tooltip_not_industrial_or_overconsumption:0 "Is not §Y$ethic_industrial$§! or §YOverconsuming§! Gestalt"
-	civic_tooltip_green_or_gestalt:0 "Is some degree of §Y$ethic_green$§! or is a §YGestalt consciousness§!"
-	civic_tooltip_industrial_or_gestalt:0 "Is some degree of §Y$ethic_industrial$§! or is a §YGestalt consciousness§!"
+	civic_tooltip_not_industrialist_or_overconsumption:0 "Is not §Y$ethic_industrial$§! or §YOverconsuming§! Gestalt"
+	civic_tooltip_ecologist_or_gestalt:0 "Is some degree of §Y$ethic_green$§! or is a §YGestalt consciousness§!"
+	civic_tooltip_industrialist_or_gestalt:0 "Is some degree of §Y$ethic_industrial$§! or is a §YGestalt consciousness§!"
 
 	civic_tooltip_egalitarian_or_pluralist:0 "Is some degree of §Y$ethic_egalitarian$§! or §Y$ethic_pluralist$§!"
  # /
