--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -36,6 +36,8 @@
 	tec_blocks_ap_hive_worlds:0 "$TRIGGER_FAIL$This Ascension Perk is blocked by Origins that change capital planet class to Gaia World."
 	tec_blocks_ap_machine_worlds:0 "$TRIGGER_FAIL$This Ascension Perk is blocked by Origins that change capital planet class to Gaia World."
 
+	tec_ap_require_tech_cloning:1 "$TRIGGER_FAIL$Requires the £society£ §Y$tech_cloning$§! technology."
+
  # Terraforming APs
 
 	tec_ap_terraforming_steps:0 "\n\n§HTier I - Terraforming Path Finisher§!"
