--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1,5 +1,91 @@
 ﻿l_english:
 
+# Council Agendas
+ # Generic
+	council_agenda_agenda_tec_assembly_robots_name:0 "Mechanical Motivators"
+	council_agenda_agenda_tec_assembly_robots_desc:0 "Progress comes with technological advancements and better automated units."
+	modifier_tec_agenda_tec_assembly_robots_finish:0 "$council_agenda_agenda_tec_assembly_robots_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_assembly_robots_finish_desc:0 "$council_agenda_agenda_tec_assembly_robots_desc$"
+
+	council_agenda_agenda_tec_assembly_cloning_name:0 "Bolstered Bio-Printing"
+	council_agenda_agenda_tec_assembly_cloning_desc:0 "New techniques of organic reproduction and genetic weaving will improve the efficiency of our empire."
+	modifier_tec_agenda_tec_assembly_cloning_finish:0 "$council_agenda_agenda_tec_assembly_cloning_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_assembly_cloning_finish_desc:0 "$council_agenda_agenda_tec_assembly_cloning_name$"
+
+
+	council_agenda_agenda_tec_assembly_robots_provide_robot_techs:0 "Provide the next £engineering£ §YRobotic§! Technology"
+	council_agenda_agenda_tec_assembly_robots_provide_powered_tech:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_workers_tech:0 "Progress towards £engineering£§Y$tech_robotic_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_droids_tech:0 "Progress towards £engineering£§Y$tech_droid_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_synth_tech:0 "Progress towards £engineering£§Y$tech_synthetic_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_synth_leaders_tech:0 "Progress towards £engineering£§Y$tech_synthetic_leaders$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_synth_hive_tech:0 "Progress towards £engineering£§Y$tech_synthetic_workers_hive$§!: §G+$@agenda_award_tech_progress|0%$§!"
+
+	council_agenda_agenda_tec_assembly_robots_provide_machine_techs:0 "Provide the next £engineering£ Machine §YAssembly§! or §YModification§! Technology"
+	council_agenda_agenda_tec_assembly_robots_provide_machine_powered_tech:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_machine_robomodding_tech:0 "Progress towards £engineering£§Y$tech_robomodding_m$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_machine_binary_tech:0 "Progress towards £engineering£§Y$tech_binary_motivators$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_machine_mega_assembly_tech:0 "Progress towards £engineering£§Y$tech_mega_assembly$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_machine_giga_assembly_tech:0 "Progress towards £engineering£§Y$tech_giga_assembly$§!: §G+$@agenda_award_tech_progress|0%$§!"
+
+	council_agenda_agenda_tec_assembly_cloning_provide_techs:0 "Provide the next £tec_genetics_icon£ §YCloning§! or §YGene-Modification§! Technology"
+	council_agenda_agenda_tec_assembly_cloning_provide_cloning_tech:0 "Progress towards £society£§Y$tech_cloning$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_cloning_provide_genome_mapping_tech:0 "Progress towards £society£§Y$tech_genome_mapping$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_cloning_provide_cloning_2_tech:0 "Progress towards £society£§Y$tech_tec_cloning_2$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_cloning_provide_gene_tailoring_tech:0 "Progress towards £society£§Y$tech_gene_tailoring$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_cloning_provide_glandular_acclimation_tech:0 "Progress towards £society£§Y$tech_glandular_acclimation$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_cloning_provide_cloning_3_tech:0 "Progress towards £society£§Y$tech_tec_cloning_3$§!: §G+$@agenda_award_tech_progress|0%$§!"
+ # /
+ # Ethic
+	modifier_tec_agenda_display_of_power_finish:0 "$agenda_display_of_power_finish$"
+	modifier_tec_agenda_display_of_power_finish_desc:0 "$agenda_display_of_power_finish_desc$ $agenda_ref$"
+	modifier_tec_agenda_strong_on_our_own_finish:0 "$agenda_strong_on_our_own_finish$"
+	modifier_tec_agenda_strong_on_our_own_finish_desc:0 "$agenda_strong_on_our_own_finish_desc$ $agenda_ref$"
+	modifier_tec_agenda_progressive_growth_finish:0 "$agenda_progressive_growth_finish$"
+	modifier_tec_agenda_progressive_growth_finish_desc:0 "$agenda_progressive_growth_finish_desc$ $agenda_ref$"
+
+	council_agenda_agenda_tec_ethic_cooperative_name:0 "Social Benefits"
+	council_agenda_agenda_tec_ethic_cooperative_desc:0 "Via intelligent sharing of goods, we will benefit everyone."
+	modifier_tec_agenda_tec_ethic_cooperative_finish:0 "$council_agenda_agenda_tec_ethic_cooperative_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_ethic_cooperative_finish_desc:0 "$council_agenda_agenda_tec_ethic_cooperative_desc$"
+
+	council_agenda_agenda_tec_ethic_competitive_name:0 "Market Flexibility"
+	council_agenda_agenda_tec_ethic_competitive_desc:0 "Economical productivity must drive us forward."
+	modifier_tec_agenda_tec_ethic_competitive_finish:0 "$council_agenda_agenda_tec_ethic_competitive_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_ethic_competitive_finish_desc:0 "$council_agenda_agenda_tec_ethic_competitive_desc$"
+
+	council_agenda_agenda_tec_ethic_ecologist_name:0 "Ecological Reprocessing"
+	council_agenda_agenda_tec_ethic_ecologist_desc:0 "Tools, infrastructures, personal consumption... all must respect nature and follow strict recycling policies."
+	modifier_tec_agenda_tec_ethic_ecologist_finish:0 "$council_agenda_agenda_tec_ethic_ecologist_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_ethic_ecologist_finish_desc:0 "$council_agenda_agenda_tec_ethic_ecologist_desc$"
+
+	council_agenda_agenda_tec_ethic_industrialist_name:0 "Celestial Industrialization"
+	council_agenda_agenda_tec_ethic_industrialist_desc:0 "The stars are a source of riches, and as so we will take advantage of the goods at our grasp!."
+	modifier_tec_agenda_tec_ethic_industrialist_finish:0 "$council_agenda_agenda_tec_ethic_industrialist_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_ethic_industrialist_finish_desc:0 "$council_agenda_agenda_tec_ethic_industrialist_desc$"
+
+	council_agenda_agenda_tec_ethic_elitist_name:0 "Promoted Excellence"
+	council_agenda_agenda_tec_ethic_elitist_desc:0 "Those who excel are those who represent our very ideals."
+	modifier_tec_agenda_tec_ethic_elitist_finish:0 "$council_agenda_agenda_tec_ethic_elitist_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_ethic_elitist_finish_desc:0 "$council_agenda_agenda_tec_ethic_elitist_desc$"
+
+	council_agenda_agenda_tec_ethic_pluralist_name:0 "Principles of Formation"
+	council_agenda_agenda_tec_ethic_pluralist_desc:0 "We will ensure everyone has access to formation and educational programs, so everyone can shine."
+	council_agenda_agenda_tec_ethic_pluralist_effects:0 "Leaders will gain extra §Y£council£Passive Experience§!"
+	modifier_tec_agenda_tec_ethic_pluralist_finish:0 "$council_agenda_agenda_tec_ethic_pluralist_name$ $agenda_ref$"
+	modifier_tec_agenda_tec_ethic_pluralist_finish_desc:0 "$council_agenda_agenda_tec_ethic_pluralist_desc$"
+
+	modifier_tec_agenda_tec_ethic_gestalt_apathy_finish:0 "REPLACE_ME"
+	modifier_tec_agenda_tec_ethic_gestalt_empathy_finish:0 "REPLACE_ME"
+	modifier_tec_agenda_tec_ethic_gestalt_preservation_finish:0 "REPLACE_ME"
+	modifier_tec_agenda_tec_ethic_gestalt_overconsumption_finish:0 "REPLACE_ME"
+	modifier_tec_agenda_tec_ethic_gestalt_introspective_finish:0 "REPLACE_ME"
+	modifier_tec_agenda_tec_ethic_gestalt_extrospective_finish:0 "REPLACE_ME"
+ # /
+ # Other
+
+ # /
+# /
 
 # Edicts
 
@@ -29,9 +115,10 @@
 	edict_tec_elite_boosting_desc: "TODO"
 
 # /
+# Civics/mechanics
  edict_tec_mortgage_edict:0 "£job_purge£ Eternal Shifts"
  edict_tec_mortgage_edict_desc:0 "Workers will work to pay their debts until they die, and after that they will continue working to pay. Each planet with a §YDread Encampment§Y will receive a bonus of §G30%§! Worker Output, but there is a chance of a worker pop §Rdeath§! every year."
-
+# /
 
 
 
