Some smol fixes

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -784,7 +784,8 @@
 
 	civic_distinguished_admiralty:0 "§M§!Distinguished Admiralty"
 	civic_distinguished_admiralty_desc:0 "['concept_tec_leader_civic']\n\nThe Fleet and the Admiralty have unusually prominent roles in this society, wielding a great deal of influence in political circles. They have the pick of the litter when it comes to new military recruits."
-	civic_distinguished_admiralty_tooltip:0 ""
+	civic_distinguished_admiralty_tooltip:0 "§YIf combined with Elitist ethic, the +2 Leader Starting Level modifiers are converted to +1 Leader Strating Trait§!"
+  civic_distinguished_admiralty_tooltip_elitist: ""
 
 	civic_heroic_tales:0 "§M§!Heroic Past"
 	civic_heroic_tales_desc:1 "['concept_tec_leader_civic']\n\nThe legendary heroes of the past inspire this civilizations young people to achieve the extraordinary. As role models, government officials are expected to embody these ideals."
